[project]
name = "harlequin-questdb"
version = "0.2.0"
description = "A Harlequin adapter for QuestDB."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "harlequin>=1.7,<3",
    "psycopg[binary]>=3.1",
]

[project.entry-points."harlequin.adapter"]
questdb = "harlequin_questdb:QuestDBAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harlequin_questdb"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "mypy>=1.7",
    "ruff>=0.4",
]

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I"]

[tool.mypy]
python_version = "3.12"
files = ["src/**/*.py", "tests/**/*.py"]
mypy_path = "src"
disallow_untyped_defs = true
check_untyped_defs = true